--- a/relinksys/web/src/app/admin/dashborad.component.html
+++ b/relinksys/web/src/app/admin/dashborad.component.html
@@ -14,6 +14,14 @@
                 </div>
             </div>
             <div class="row">
+                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 crds"
+                    style="text-align: left;position: absolute; bottom: 0; ">
+                    <h4 style="font-weight: 600; font-size: 1.5rem; color: #ff5100;">Customer Support  </h4>
+                    <h4 ><i style="color: #ff5100;" class="fa-solid fa-square-phone"></i> Mrs. Pooja (Technical Support) +91 93569 51667 </h4>
+                    <h4 ><i style="color: #ff5100;" class="fa-solid fa-square-phone"></i> Mr. Santosh (Complain & Technical Support) +91 97666 66248</h4>
+                    <h4 ><i style="color: #ff5100;" class="fa-solid fa-square-phone"></i> Mr. Vinay  (Technical Help) +91 87703 03677</h4>
+                    
+                </div>
                 <div class="col-xl-6 col-lg-4 col-md-6 col-sm-6 col-12 crds ms-auto"
                     style="text-align: end;position: absolute; bottom: 0; right: 0;">
                     <h4>LoginName - {{this.user.Name}} </h4>
