--- a/relinksys/web/src/app/sale/billing/billing.component.html
+++ b/relinksys/web/src/app/sale/billing/billing.component.html
@@ -9,7 +9,7 @@
                         <div class="header">
                             <div class="row">
                                 <div class="col-lg-2 col-md-2 col-3">
-                                    <h4 class="d-none d-md-block" style="font-weight: 600;" [routerLink]="['/sale/optometrist']"> Customer ID <b
+                                    <h4 class="d-none d-md-block" style="font-weight: 600;" [routerLink]="['/sale/optometrist' ,data.ID]"> Customer ID <b
                                             style="color:#000">{{this.data.Idd}}</b> / <b
                                             style="color:#000">{{this.data.Category}}</b> </h4>
                                     <h4 class="d-block d-md-none" style="font-weight: 600;"> ID <b
