--- a/garment/web/src/app/admin/company-setting/company-setting.component.html
+++ b/garment/web/src/app/admin/company-setting/company-setting.component.html
@@ -319,6 +319,7 @@
                                                                 <mat-option value="Al_Hareem_Perfumes.ejs">Al_Hareem_Perfumes.ejs</mat-option>
                                                                 <mat-option value="Sai_Drushti.ejs">Sai_Drushti.ejs</mat-option>
                                                                 <mat-option value="Alif_Trades.ejs">Alif_Trades.ejs</mat-option>
+                                                                <mat-option value="Vision_world.ejs">Alif_Trades.ejs</mat-option>
                                                             </mat-select>
                                                             <mat-error>Bill Format </mat-error>
                                                         </mat-form-field>
