--- a/garment/web/src/app/sale/bill/bill.component.html
+++ b/garment/web/src/app/sale/bill/bill.component.html
@@ -431,11 +431,11 @@
                                     </td>
                                     <td *ngIf="loginShop?.Discount === 'true' && isLastRow(i) "><input type="number"
                                             name="DiscountAmount1{{i}}" class="form-control form-control-sm" style="text-align:center"
-                                            [(ngModel)]="data.DiscountAmount" (blur)="calculations('DiscountPercentage', 'discount');calculations('Quantity', 'subTotal');calculations('GSTPercentage', 'gst');calculations('TotalAmount', 'total')">
+                                            [(ngModel)]="data.DiscountAmount" (blur)="calculateFields1('DiscountAmount', 'discount',data)">
                                     </td>
                                     <td *ngIf="loginShop?.Discount === 'true' &&  data.UpdateProduct"><input type="number"
                                             name="DiscountAmount1{{i}}" class="form-control form-control-sm" style="text-align:center"
-                                            [(ngModel)]="data.DiscountAmount" (blur)="calculateFields1('DiscountAmount', 'discount',data);calculateFields1('DiscountPercentage', 'discount',data);calculateFields1('UnitPrice', 'subTotal',data);calculateFields1('GSTPercentage', 'gst',data)">
+                                            [(ngModel)]="data.DiscountAmount" (blur)="calculateFields1('DiscountAmount', 'discount',data)">
                                     </td>
                                     <td *ngIf="!isLastRow(i) && !data.UpdateProduct && loginShop?.Discount === 'true'" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }">
                                          {{ data.DiscountAmount }}
