--- a/relinksys/api/views/vision_world.ejs
+++ b/relinksys/api/views/vision_world.ejs
@@ -88,8 +88,10 @@
             <tr>
 
  		 <th colspan="2" >
-                 <b  style="font-size: 14px;   font-family: 'Century Gothic', sans-serif !important; ">   S.No 571/572 Shop No - 12, Kumar Park, Bibwewadi - Kondhwa RD, Pune - 411037  <br>
-                    Contact   <img src='http://localhost:3000/assest/call-svgrepo-com.png' alt="" width="1.3%"> <img src='http://localhost:3000/assest/whatsapp-128-svgrepo-com.png' alt="" width="1.3%"> +91 9975988875 </b>
+                 <!-- <b  style="font-size: 14px;   font-family: 'Century Gothic', sans-serif !important; ">   S.No 571/572 Shop No - 12, Kumar Park, Bibwewadi - Kondhwa RD, Pune - 411037  <br>
+                    Contact   <img src='http://localhost:3000/assest/call-svgrepo-com.png' alt="" width="1.3%"> <img src='http://localhost:3000/assest/whatsapp-128-svgrepo-com.png' alt="" width="1.3%"> +91 9975988875 </b> -->
+
+                    <img src='http://localhost:3000/assest/vj-add.png' alt="" width="80%">
                 </th>
                 </th>
             </tr>
