--- a/relinksys/web/src/app/admin/company-setting/company-setting.component.html
+++ b/relinksys/web/src/app/admin/company-setting/company-setting.component.html
@@ -71,10 +71,10 @@
                                                                 <mat-option value="0">No Currency </mat-option>
                                                                 <mat-option value="INR">INR</mat-option>
                                                                 <mat-option value="USD">USD</mat-option>
-                                                                <mat-option value="CAD">CAD</mat-option>
+                                                                <mat-option value="CA$">CAD</mat-option>
                                                                 <mat-option value="AED">AED</mat-option>
                                                                 <mat-option value="OMR">OMR</mat-option>
-                                                                <mat-option value="RWF">RWF</mat-option>
+                                                                <mat-option value="FRw">RWF</mat-option>
 
                                                             </mat-select>
                                                             <mat-error>Select any currency</mat-error>
@@ -319,6 +319,9 @@
                                                                 <mat-option value="Al_Hareem_Perfumes.ejs">Al_Hareem_Perfumes.ejs</mat-option>
                                                                 <mat-option value="Sai_Drushti.ejs">Sai_Drushti.ejs</mat-option>
                                                                 <mat-option value="Alif_Trades.ejs">Alif_Trades.ejs</mat-option>
+                                                                <mat-option value="vision_world.ejs">vision_world</mat-option>
+                                                                <mat-option value="thermal print.ejs">thermal</mat-option>
+                                                                <mat-option value="optometric.ejs">optometrist</mat-option>
                                                             </mat-select>
                                                             <mat-error>Bill Format </mat-error>
                                                         </mat-form-field>
