--- a/relinksys/web/src/app/sale/bill/bill.component.html
+++ b/relinksys/web/src/app/sale/bill/bill.component.html
@@ -119,7 +119,7 @@
     (selectionChange)="changeProductStatusAll()"
   >
     <mat-option value="Pending" disabled>Pending</mat-option>
-    <mat-option value="ReadyForDelivery" disabled>ReadyForDelivery</mat-option>
+    <mat-option value="ReadyForDelivery" >ReadyForDelivery</mat-option>
     <mat-option value="Deliverd" disabled>Deliverd</mat-option>
   </mat-select>
 </mat-form-field>
