--- a/relinksys/api/views/optometric.ejs
+++ b/relinksys/api/views/optometric.ejs
@@ -197,7 +197,7 @@
 </section>
 
 
-    <section style="width: 100%; padding-top: 3%;">
+    <section style="width: 100%; padding-top: 1%;">
         <table style="width: 65%; float: left; text-align: left;">
             <tr>
                 <th>
@@ -240,10 +240,9 @@
         </table>
     </section>
 
-    <table style="width: 100%;  ">
-
-        <tr>
-            <th style="width: 90%;text-align: left;">For any complaints or suggestions(പരാതികളും നിർദേശങ്ങളും, please WhatsApp us at +91 755 888 444 1 </th>
+    <table style="width: 100%; margin-left: -1%; margin-top: -20px; ">
+        <tr style="margin: 0;">
+            <th style="width: 40%;text-align: left;padding: 0;margin: 0;"> <img src="http://theopticalguru.relinksys.com/assest/Malayalam-text.jpg" alt="" width="90%"></th>
             <th style="width: 10%;"> <h3 style="padding: 0; margin: 0;">Thank<br> You </h3>  </th>
         </tr>
 
