--- a/relinksys/web/src/app/sale/bill/bill.component.html
+++ b/relinksys/web/src/app/sale/bill/bill.component.html
@@ -352,6 +352,7 @@
                                 <mat-option value="Full Glass">Full Lens</mat-option>
                                 <mat-option value="Half Glass Left">Half Lens Left</mat-option>
                                 <mat-option value="Half Glass Right">Half Lens Right</mat-option>
+                                <mat-option value="NA">NA</mat-option>
                             </mat-select>
                             <mat-error>
                                 Select Option Type
