--- a/relinksys/web/src/app/sale/optometrist/optometrist.component.css
+++ b/relinksys/web/src/app/sale/optometrist/optometrist.component.css
@@ -69,7 +69,7 @@
       position: relative;
       width: 300px;
       height: 225px;
-      background-image: url('../../../assets/images/Picture1.png');
+      background-image: url('../../../assets/images/opto-img.jpeg');
       background-size:  100%;
       
       background-repeat: no-repeat;
