--- a/relinksys/api/views/optometristPDF.ejs
+++ b/relinksys/api/views/optometristPDF.ejs
@@ -60,21 +60,21 @@
         <table style="width: 70%; float: left; text-align: left;">
             <tr>
                 <th style="width: 15%;">Name</th>
-                <td>: sss</td>
+                <td>: <%= data.customerdetails.Name %></td>
             </tr>
             <tr>
                 <th style="width: 15%;">MobileNo</th>
-                <td>: sss</td>
+                <td>: <%= data.customerdetails.MobileNo1 %></td>
             </tr>
         </table>
         <table style="width: 25%; float: right; text-align: left;">
             <tr>
                 <th style="width: 35%;"> Age</th>
-                <td>: sss</td>
+                <td>: <%= data.customerdetails.Age %></td>
             </tr>
             <tr>
                 <th style="width: 35%;">Gender</th>
-                <td>: sss</td>
+                <td>: <%= data.customerdetails.Gender %></td>
             </tr>
         </table>
         <table></table>
