--- a/relinksys/web/src/app/admin/dashborad.component.html
+++ b/relinksys/web/src/app/admin/dashborad.component.html
@@ -24,16 +24,16 @@
                 </div>
                 <div class="col-xl-6 col-lg-4 col-md-6 col-sm-6 col-12 crds ms-auto"
                     style="text-align: end;position: absolute; bottom: 0; right: 0;">
-                    <h4>LoginName - {{this.user.Name}} </h4>
+                    <!-- <h4>LoginName - {{this.user.Name}} </h4>
                     <h4 *ngIf="user.UserGroup == 'CompanyAdmin'">Shop Name - {{this.company.Name}} </h4>
                     <h4 *ngIf="user.UserGroup == 'CompanyAdmin'">Address - {{this.company.Address}} </h4>
                     <h4 *ngIf="user.UserGroup != 'CompanyAdmin'">Shop Name - {{this.shop[0].Name}} </h4>
-                    <h4 *ngIf="user.UserGroup != 'CompanyAdmin'">Address - {{this.shop[0].Address}} </h4>
+                    <h4 *ngIf="user.UserGroup != 'CompanyAdmin'">Address - {{this.shop[0].Address}} </h4> -->
                     <!-- <h4>Email  - {{this.company.Email}} </h4>
                 <h4>State - {{this.company.State}} </h4>
                 <h4>Country - {{this.company.Country}}</h4> -->
-                    <h4>Software Start Date {{this.company.EffectiveDate}} To End Date {{this.company.CancellationDate}}
-                    </h4>
+                    <!-- <h4>Software Start Date {{this.company.EffectiveDate}} To End Date {{this.company.CancellationDate}}
+                    </h4> -->
                 </div>
             </div>
         </div>
