--- a/relinksys/web/src/app/po/quotation/quotation.component.html
+++ b/relinksys/web/src/app/po/quotation/quotation.component.html
@@ -28,7 +28,7 @@
                             <!-- togggle btn end -->
                         </div>
                     </div>
-                    <div class="body  mt-4 mt-md-0">
+                    <div class="body  mt-4 mt-md-2">
                         <!-- save purchase start -->
                         <form #f1="ngForm" autocomplete="off" (ngSubmit)="addItem()">
                             <!-- save purchase start -->
@@ -36,10 +36,10 @@
                                 <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0 d-inline-flex">
                                      <mat-form-field class="example-full-width mb-0">
                                         <mat-label>SupplierName</mat-label>
-                                        <input matInput name="InvoiceNo" [(ngModel)]="selectedPurchaseMaster.SupplierName"
+                                        <input matInput name="SupplierName" [(ngModel)]="selectedPurchaseMaster.SupplierName"
                                            type="text" (ngModelChange)="selectedPurchaseMaster.SupplierName = onChange($event)"
                                             required #SupplierNamecontrol
-                                            [disabled]="user.UserGroup === 'Employee' && selectedPurchaseMaster.ID !== null">
+                                            [disabled]="selectedPurchaseMaster.ID !== null">
                                         <mat-error>
                                             SupplierName is required
                                         </mat-error>
